k8s-cd/base/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: hoppingmall
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: grpc
      port: 9082
      targetPort: 9082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-canary
  namespace: hoppingmall
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: grpc
      port: 9082
      targetPort: 9082
